Bug fixes (#18)
* fix bug where config is mutated for POST invoice requests

* return 402 instead of 401 for unpaid invoice in token route
