# src/routes/token.ts
@@ -11,8 +11,6 @@ export async function satisfyTokenChallenge(
   res: Response,
   next: NextFunction
 ): Promise<Response | void> {
-  if (!req.boltwallConfig || !req.boltwallConfig.oauth) return next()
-
   if (!req.body || !req.body.macaroon) {
     res.status(400)
     return next({ message: 'Missing macaroon in request body' })
@@ -65,8 +63,10 @@ export async function satisfyTokenChallenge(
   )
 
   if (invoiceResponse.status === 'unpaid') {
-    res.status(401)
-    return next({ message: 'Unauthorized: Token requested for unpaid invoice' })
+    res.status(402)
+    return next({
+      message: 'Payment Required: Token requested for unpaid invoice',
+    })
   }
 
   // sign challenge
@@ -93,7 +93,6 @@ export async function satisfyTokenChallenge(
     }
   }
   const macaroon = builder.getMacaroon().serialize()
-
   return res.json({ macaroon })
 }
 
